cleaning the survey after closing the modal

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,7 +22,7 @@
       <img src="" alt="">
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat" id="agreeLink" >Agree</a>
     </div>
   </div>
         
